--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fluttertoast: ^8.2.4
   intl: ^0.19.0
   firebase_core: ^2.25.4
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
