--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   intl: ^0.19.0
   firebase_core: ^2.25.4
   get: ^4.6.6
+  syncfusion_flutter_charts: ^24.2.8
+  firebase_auth: ^4.17.6
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
