--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,11 +87,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Open Sans
+      fonts:
+        - asset: assets/fonts/opensans-extrabold.ttf
+        - asset: assets/fonts/opensans-reguler.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
